# library_catalog

./: .env  .gitignore  alembic.ini  check_tables.py  docker-compose.yml  init_sqlite.py  library.db  pyproject.toml  run_app.py  test_app.py  test_postgres.py
alembic/: env.py
alembic/versions/: d82aa0f54924_create_books_table.py
src/library_catalog/: main.py
src/library_catalog/api/: dependencies.py  deps.py  errors.py
src/library_catalog/api/v1/routers/: books.py  health.py  health_simple.py
src/library_catalog/api/v1/schemas/: book.py
src/library_catalog/core/: clients.py  config.py  database.py  exceptions.py  logging_config.py
src/library_catalog/data/models/: book.py
src/library_catalog/data/repositories/: base_repository.py  book_repository.py
src/library_catalog/domain/: exceptions.py
src/library_catalog/domain/mappers/: book_mapper.py
src/library_catalog/domain/schemas/: book.py
src/library_catalog/domain/services/: book_service.py  book_service_backup.py  book_service_v2.py
