[tool.poetry]
name = "library-catalog"
version = "0.1.0"
description = ""
authors = ["arrdt11-dev <arrdt11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
sqlalchemy = "^2.0.45"
alembic = "^1.17.2"
asyncpg = "^0.31.0"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
httpx = "^0.28.1"
python-dotenv = "^1.2.1"
psycopg2-binary = "^2.9.11"
nest-asyncio = "^1.6.0"
aiosqlite = "^0.22.1"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
black = "^25.12.0"
ruff = "^0.14.10"
mypy = "^1.19.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
